enable firefox
